# appkey-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/yqyzxd/appkey/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/yqyzxd/appkey/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
appkey/: build.gradle
appkey/src/androidTest/java/com/github/yqyzxd/appkey/: ExampleInstrumentedTest.kt
appkey/src/main/: AndroidManifest.xml
appkey/src/main/cpp/: CMakeLists.txt  com_github_yqyzxd_appkey_Keys.cpp  com_github_yqyzxd_appkey_Keys.h
appkey/src/main/cpp/key/: AliyunKey.cpp  AliyunKey.h  HwKey.cpp  HwKey.h  JpushKey.cpp  JpushKey.h  Key.h  KeyFactory.cpp  KeyFactory.h  Keys.cpp  Keys.h  OppoKey.cpp  OppoKey.h  ShanYanKey.cpp  ShanYanKey.h  UmengKey.cpp  UmengKey.h  VivoKey.cpp  VivoKey.h  WeChatKey.cpp  WeChatKey.h  XiaoMiKey.cpp  XiaoMiKey.h
appkey/src/main/cpp/util/: StringUtil.h
appkey/src/main/java/com/github/yqyzxd/appkey/: Keys.kt
appkey/src/test/java/com/github/yqyzxd/appkey/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
